<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="rtl"
    tools:context="com.khosroabadi.fellowtraveler.activity.MainActivity">


    <Button
        android:id="@+id/clientBtn"
        android:text="@string/client"
        android:layout_marginTop="4dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"/>
    <Button
        android:id="@+id/serverBtn"
        android:text="@string/server"
        android:layout_marginTop="4dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_below="@id/clientBtn"/>

    <Button
        android:id="@+id/mapBtn"
        android:text="@string/map"
        android:layout_marginTop="4dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_below="@id/serverBtn"/>

    <EditText
        android:layout_above="@id/clientBtn"
        android:id="@+id/devicename"
        android:layout_centerHorizontal="true"
        android:layout_width="200dp"
        android:hint="@string/device_name"
        android:layout_height="wrap_content" />


</RelativeLayout>
