<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content" android:layout_height="wrap_content" android:layoutDirection="rtl">

    <TextView
        android:id="@+id/dialog_title"
        android:background="@color/colorAccent"
        android:text="@string/pair_request_dialog_title"
        android:layout_width="match_parent"
        android:gravity="center_horizontal|center_vertical"
        android:layout_alignParentTop="true"
        android:textColor="#fff"
        android:layout_height="?android:attr/actionBarSize" />

    <TextView
        android:id="@+id/pair_request_dialog_device_name"
        android:layout_below="@id/dialog_title"
        android:layout_margin="@dimen/horizontal_margin"
        android:gravity="start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_below="@id/dialog_title"
        android:layout_toEndOf="@id/pair_request_dialog_device_name"
        android:layout_margin="@dimen/horizontal_margin"
        android:gravity="start"
        android:text="درخواست اتصال به گوشی شمارا دارد آیا مورد تایید است؟"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


    <Button
        android:id="@+id/pair_dialog_btn_yes"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/horizontal_margin"
        android:text="@string/yes"
        android:layout_alignParentStart="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/pair_dialog_btn_no"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="@dimen/horizontal_margin"
        android:text="@string/no"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</RelativeLayout>